--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@ body{
  min-height:100vh;
 }
 .screen{
- position:absolute;
- inset:0;
+ position:relative;
+ width:100%;
+ min-height:100vh;
  display:none;
  justify-content:center;
  align-items:flex-start;
  text-align:center;
  padding:30px;
  overflow-y:auto;
-
  opacity:0;
  transition:opacity 0.5s ease;
 }
+
 
 .screen.active{
  display:flex;
@@ -128,15 +129,27 @@ button:active{transform:scale(0.96)}
 #final{
  background: radial-gradient(circle at 70% 20%, #0d2a6b 0%, #05143a 40%, #000 100%);
  color:white;
- overflow:hidden;
 
+ display:flex;
  flex-direction:column;
  align-items:center;
  justify-content:flex-start;
 
  padding-top:60px;
-}
+ padding-bottom:60px;
+ padding-left:20px;
+ padding-right:20px;
 
+ position:relative;
+
+ min-height:100vh;
+
+ overflow-x:hidden;
+ overflow-y:auto;
+
+ text-align:center;
+}
+ 
 #final.active{
  display:flex;
 }
@@ -503,5 +516,6 @@ noBtn.addEventListener("mouseenter", function(){
 
 </script>
  
+
 
 </body>
